# clean-django

./: .gitignore  README.md  pyproject.toml
app/articles/: apps.py
app/users/: admin.py  apps.py  managers.py  models.py  serializers.py  urls.py  views.py
config/: asgi.py  auth.py  constants.py  exception.py  response.py  settings.py  urls.py  wsgi.py
config/base/: models.py  serializers.py  views.py
